# oscam-emu

./: .gitignore  CMakeLists.txt  CODING.RULES.txt  Makefile  Makefile.extra  README  README.config  VERSION  config.h  config.h.orig  config.sh  config.sh.orig  emulator.c  globals.h  globals.h.rej  module-anticasc.c  module-anticasc.h  module-cacheex.c  module-cacheex.h  module-camd33.c  module-camd35.c  module-cccam-data.h  module-cccam.c  module-cccam.h  module-cccshare.c  module-constcw.c  module-csp.c  module-cw-cycle-check.c  module-cw-cycle-check.h  module-dvbapi-azbox.c  module-dvbapi-azbox.h  module-dvbapi-coolapi.c  module-dvbapi-coolapi.h  module-dvbapi-mca.c  module-dvbapi-mca.h  module-dvbapi-stapi.c  module-dvbapi-stapi.h  module-dvbapi.c  module-dvbapi.h  module-gbox.c  (+95 more)
.svn/: all-wcprops  dir-prop-base  entries
.svn/text-base/: Makefile.svn-base  README.build.svn-base  README.svn-base  globals.h.svn-base  module-anticasc.c.svn-base  module-cacheex.c.svn-base  module-cacheex.h.svn-base  module-cccam.c.svn-base  module-cccam.h.svn-base  module-cccshare.h.svn-base  module-constcw.c.svn-base  module-csp.c.svn-base  module-cw-cycle-check.h.svn-base  module-dvbapi-azbox.c.svn-base  module-dvbapi-coolapi.c.svn-base  module-dvbapi-mca.h.svn-base  module-dvbapi-stapi.h.svn-base  module-dvbapi.h.svn-base  module-gbox.h.svn-base  module-ird-guess.c.svn-base  module-ird-guess.h.svn-base  module-lcd.c.svn-base  module-lcd.h.svn-base  module-pandora.c.svn-base  module-radegast.c.svn-base  module-stat.c.svn-base  module-webif-tpl.h.svn-base  modules.h.svn-base  oscam-aes.c.svn-base  oscam-aes.h.svn-base  oscam-chk.h.svn-base  oscam-client.c.svn-base  oscam-conf-chk.c.svn-base  oscam-conf-chk.h.svn-base  oscam-conf-mk.c.svn-base  oscam-conf.h.svn-base  oscam-config-account.c.svn-base  oscam-config-global.c.svn-base  oscam-config-reader.c.svn-base  oscam-config.h.svn-base  (+24 more)
.svn/tmp/: globals.h.tmp  svn-unm9EM
Distribution/.svn/: all-wcprops  entries
Distribution/monitor/: mpcsmon-src-0.6.tar.bz2
cscrypt/: CMakeLists.txt  Makefile  aes.c  aes.h  bn.h  bn_add.c  bn_asm.c  bn_ctx.c  bn_div.c  bn_exp.c  bn_lcl.h  bn_lib.c  bn_mul.c  bn_print.c  bn_shift.c  bn_sqr.c  bn_word.c  buffer.h  des.c  des.h  i_cbc.c  i_ecb.c  i_skey.c  idea.h  idea_lcl.h  md5.c  md5.c.rej  md5.h  md5.h.orig  mem.c  rc6.c  rc6.h  sha1.c  sha1.h
cscrypt/.svn/: all-wcprops  entries
cscrypt/.svn/text-base/: aes.c.svn-base  bn.h.svn-base  bn_add.c.svn-base  bn_exp.c.svn-base  bn_lcl.h.svn-base  bn_lib.c.svn-base  bn_mul.c.svn-base  bn_shift.c.svn-base  buffer.h.svn-base  i_cbc.c.svn-base  i_skey.c.svn-base  idea_lcl.h.svn-base  md5.c.svn-base  openssl_mods.h.svn-base
csctapi/: CMakeLists.txt  atr.c  atr.h  cardreaders.h  icc_async.c  icc_async.h  ifd_azbox.c  ifd_cool.c  ifd_db2com.c  ifd_db2com.h  ifd_mp35.c  ifd_pcsc.c  ifd_phoenix.c  ifd_phoenix.h  ifd_sc8in1.c  ifd_sci.c  ifd_sci.c.orig  ifd_sci.c.rej  ifd_sci_global.h  ifd_sci_ioctl.h  ifd_smargo.c  ifd_smartreader.c  ifd_smartreader_types.h  ifd_stapi.c  ifd_stinger.c  io_serial.c  io_serial.h  protocol_t0.c  protocol_t0.h  protocol_t1.c
csctapi/.svn/: all-wcprops  entries
devtools/: README  check_cmdline_opts.sh  check_config_tables.sh  extract_config.sh
devtools/.svn/: all-wcprops  entries
extapi/: coolapi.h
extapi/.svn/: all-wcprops  entries
extapi/cygwin/: SCardErr.h  WinSCard.h  WinSmCrd.h
extapi/linux/: README  serial.h  tty_flags.h
extapi/openxcas/: openxcas_api.h  openxcas_message.h  openxcas_smartcard.h
minilzo/: lzoconf.h  lzodefs.h  minilzo.c  minilzo.h
minilzo/.svn/: all-wcprops  entries
toolchains/: toolchain-arm-coolstream.cmake  toolchain-arm-friendlyarm.cmake  toolchain-arm-mca.cmake  toolchain-arm-none.cmake  toolchain-arm-nslu2-unslung.cmake  toolchain-mips-tuxbox.cmake  toolchain-mipsel-tuxbox.cmake  toolchain-powerpc-tuxbox.cmake  toolchain-sh4-amino.cmake  toolchain-sh4-qboxhd.cmake  toolchain-sh4-tuxbox-stapi.cmake  toolchain-sparc-padre.cmake
toolchains/.svn/: all-wcprops  entries
utils/: list_smargo.c
utils/.svn/: all-wcprops  entries
webif/: Makefile  README  pages_gen.c  pages_index.txt  pages_mkdep
webif/.svn/: all-wcprops  entries
webif/api.json/: header.json  status.json
webif/api.xml/: cccamcardlist_cardlist.xml  cccamcardlist_cardlist_providerlist.xml  failban_failbanrow.xml  file.xml  footer.xml  readers.xml  readers_readerlist.xml  readerstats.xml  status.xml  status_statusbits.xml  userconfiglist_userconfigs.xml
webif/cacheex/: cacheex.html
webif/config/: cache_cacheexcsp.html  cache_cwcycle.html  camd33.html  camd35.html  cccam.html  global_enableledbit.html  global_localcards.html  lcd.html  loadbalancer.html  menu_anticasc.html  menu_camd35.html  menu_cccam.html  menu_lcd.html  menu_monitor.html  menu_radegast.html  menu_serial.html  monitor.html  radegast.html  serial.html  serial_devices.html  webif.html  webif_httpforcesslv3.html
webif/emm/: emm.html
webif/entitlements/: entitlements.html  entitlements_cccambit.html  entitlements_itembit.html
webif/failban/: failban.html  failban_failbanrow.html
webif/include/: help_prefix.html  jscript.js  message.html  message_bit.html  refresh.html
webif/readerconfig/: readerconfig.html  readerconfig_cs378xbit.html  readerconfig_ghttpbit.html  readerconfig_hwreader_irdeto.html  readerconfig_hwreader_pincode.html  readerconfig_hwreader_sc8in1.html  readerconfig_hwreader_viaccess.html  readerconfig_hwreader_videoguard.html  readerconfig_ncd524bit.html  readerconfig_ncd525bit.html
webif/readers/: readers_readerlist.html  readers_readerlist_entitlement.html  readers_readerlist_writeemm.html
webif/readerstats/: readerstats_statsbit.html
webif/savetemplates/: savetemplates.html
webif/scanusb/: scanusb.html  scanusb_usbbit.html
webif/script/: script.html
webif/services/: services_servicetabs.html  services_servicetabs_sidlist.html
webif/services_edit/: services_edit.html
webif/shutdown/: pre_shutdown.html
webif/status/: status.html  status_clientstatusbit.html  status_sdebug.html
webif/touch/: css.css
(+265 files in other folders)
